--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      a[href^=mailto]{
+        color: white;
+        text-decoration: none;
+      }
+      a:hover[href^=mailto]{
+        color: white;
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
