--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Content for site shares -->
+    <meta property="og:title" content="Get-It-Write" />
+    <meta property="og:description" content="Setting you up for success one email at a time!" />
+    <meta property="og:image" content="%PUBLIC_URL%/Get it Write.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="750" />
+    <meta property="og:image:height" content="723" />
+    <meta property="og:image:alt" content="Git it Write Logo"/>
+
+
     <title>React App</title>
     <style>
       a[href^=mailto]{
