finished  going through the add expereince and remove experience routes.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -55,6 +55,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6025d4014e5d9701"></script>
+    
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-601ece5cfb71c5a5"></script>
+
   </body>
 </html>
